# underthesea

./: .eslintrc.json  .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NLP.md  README.md  README.rst  README.vi.rst  SPONSORS.md  SUPPORT_US.md  blog.html  docs.html  environment.yml  graph_input.md  index.html  mkdocs.yml  package-lock.json  package.json  prompt.txt  prompt_generate_intents.txt  pylintrc  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  travis_pypi_setup.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -d--li-u--.md
.github/workflows/: build-core-docker.yml  build-core.yml  build.yml  ci-agent.yml  ci-deep.yml  ci-examples.yml  ci-pipe-langdetect.yml  ci-prompt.yml  ci-rust.yml  ci-say.yml  ci-train-dep.yml  ci-train-pos.yml  ci-tts.yml  ci-windows.yml  crates-build.yml  crates-release.yml  deploy-languages-v2-web.yml  docker-build-image.yml  docker-languages-v2-app.yml  docker-languages-v2-web.yml  docker-underthesea.yml  docs.yml  examples.yml  lint.yml  publish-packages.yml  release-crates-core.yml  release-crates.yaml  release-pypi-core-mac.yml  release-pypi-core-test.yml  release-pypi-core.yml  release-pypi.yml
apps/: README.md  col_add_entry.py  col_data.py  col_dictionary.py  col_dictionary_export_from_elasticsearch.py  col_dictionary_import_to_elasticsearch.py  col_dictionary_stat.py  col_streamlit.py  step1_index_data.py
apps/dictionary/: Dockerfile  README.md
apps/directory/: col_data.py  col_dictionary_stat.py  col_streamlit_corpus.py
apps/languages/: DEVELOPER_GUIDE.md  README.md
apps/service/: README.md  SERVER_SETUP_TUTORIAL.md  manage.py  requirements.txt  run.sh
apps/streamlit_dictionary/: col_dictionary_export_from_elasticsearch.py  col_dictionary_import_to_elasticsearch.py  col_dictionary_stat.py
apps/tests/: test_col_data.py
assets/css/: styles.25b58cbe.css
assets/js/: 010e16a7.a11e55c9.js  010e16a7.b800c113.js  0139cb75.25f3ce7a.js  0139cb75.89d3b318.js  01a85c17.662708ef.js  05278c50.6967730c.js  0566cc0c.20b25fd0.js  0774bca0.719e11eb.js  0813f530.61d8ddf5.js  0813f530.78912c23.js  0831a4b9.0489760a.js  0831a4b9.0f30b6b9.js  0846bfa4.bd903585.js  0846bfa4.e6a839db.js  08df43a5.92d0764c.js  08df43a5.ffd1b102.js  0c5941a3.10ff6fbe.js  0e24ebb0.3dd861bc.js  0e24ebb0.68e01759.js  0e333882.dad8f63f.js  0e333882.e429d667.js  0e384e19.47c80d96.js  0e384e19.92f496bb.js  0e384e19.b14aa9d5.js  0f0ca9e0.d2c714fe.js  0f0ca9e0.e58b642b.js  0f38a01e.ae4c8cd7.js  0f38a01e.fd10b8c7.js  0f64e9d3.c67cd48d.js  108ca91c.9b7d48e6.js  (+435 more)
blog/: archive.html  atom.xml  authors.html  rewrite-fasttext-in-rust.html  rewrite-rust-crf-model.html  rss.xml  rust-text-classifier.html  tags.html
contribute/: CONTRIBUTING.rst  SUPPORT_US.md
dev/: 404.html  blog.html  docs.html  index.html  sitemap.xml
docs/: 9.2.11.html  9.3.0.html  9.4.0.html  CHANGELOG.md  Makefile  api.html  api.rst  authors.rst  changelog.html  code.rst  conf.py  contributing.rst  docusaurus.config.js  history.md  history.rst  index.html  index.md  index.rst  installation.md  installation.rst  make.bat  mkdocs.yml  next.html  package-lock.json  package.json  package_reference.rst  quickstart.md  readme.rst  sidebars.js  usage.rst  versions.json
docs/api/: ner.md  (+25 more)
docusaurus/: docusaurus.config.js  sidebars.js
examples/: README.md
extensions/labs/classify_ml/: UTS-CAT 1 - System Card.md  predict.py  pyproject.toml  train.ipynb  train.py
extensions/labs/classify_ml/sonar_core_1/: .gitignore  README.md  Sonar Core 1 - System Card.md  datasets.py  label_mapping.txt  predict.py  pyproject.toml  test_datasets.py  train.py  uts_datasets.py
extensions/labs/classify_ml/sonar_core_1/runs/20250921_160938/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250921_161340/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250921_163614/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250921_163812/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250922_133213/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250923_100430/: metadata.json
extensions/labs/classify_ml/sonar_core_1/runs/20250923_101527/: metadata.json
extensions/underthesea_core/: .gitignore  Cargo.toml  HISTORY.rst  README.md  lab_underthesea_core.py  pyproject.toml  test_module.sh  test_underthesea_core.py
extensions/underthesea_core/benches/: featurizers.rs  lab.rs
extensions/underthesea_core/docs/: README.md
extensions/underthesea_core/src/: bayesian.rs  featurizers.rs  lib.rs  logistic.rs  preprocessor.rs  tfidf.rs
extensions/underthesea_core/src/classifier/: mod.rs
extensions/underthesea_core/src/crf/: crfsuite_format.rs  features.rs  mod.rs  model.rs  serialization.rs  tagger.rs  trainer.rs
extensions/underthesea_core/src/fasttext/: args.rs  dictionary.rs  hash.rs  inference.rs  matrix.rs  mod.rs
extensions/underthesea_core/src/features/: mod.rs  tfidf_featurizer.rs
extensions/underthesea_core/src/lr/: mod.rs  model.rs  predictor.rs  serialization.rs  trainer.rs
extensions/underthesea_core/src/metrics/: cosine_similarity.rs  mod.rs
extensions/underthesea_core/src/svm/: mod.rs
extensions/underthesea_core/src/text/: mod.rs  tfidf.rs
extensions/underthesea_core/tests/: crf_tests.rs  featurizers.rs  integration_tests.rs  lr_tests.rs  models.rs
guidelines/: VIETNAMESE.md
labs/: analyze.xlsx  analyze_characters.py  analyze_corpus.py  lab_unicode.ipynb  new_characters.xlsx  other_characters.xlsx  tcvn_6909_2001.xlsx  tcvn_generate.py  vietnamese_normalize.py
tests/: requirements_dev.txt  test_data_fetcher.py  test_pos_tag.py  test_tokenize.py  test_underthesea.py  test_word_sent.py  word_sent.py
underthesea/: VERSION  __init__.py  animal.py  cli.py  data.py  data_fetcher.py  data_lf.py  datasets.yaml  datasets_lf.py  file_utils.py  file_utls.py  model_fetcher.py  models.py  models.yaml  models_.py  nn.py  underthesea.py  version.py  word_sent_1.py
(+4281 files in other folders)
