[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "underthesea"
version = "8.0.0a0"
description = "Vietnamese NLP Toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
authors = [{ name = "Vu Anh", email = "anhv.ict91@gmail.com" }]
dependencies = [
    "flake8>=7.3.0",
    'Click>=6.0',
    'python-crfsuite>=0.9.6',
    'nltk==3.8',
    'tqdm',
    'requests',
    'joblib',
    'scikit-learn==1.6.1',
    'PyYAML',
    'underthesea_core==1.0.5'
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
[project.urls]
Homepage = "https://undertheseanlp.com/"
Repository = "https://github.com/undertheseanlp/underthesea"

[project.scripts]
underthesea = "underthesea.cli:main"

[project.optional-dependencies]
train = [
    "seqeval"
]
deep = [
    "torch>=1.1.0,<1.13",
    "transformers>=3.5.0"
]
wow = [
    "dm-haiku",
    "optax",
    "soundfile",
    "matplotlib",
    "playsound"
]
prompt = [
    "openai"
]
langdetect = [
    "fasttext"
]
test = [
    "nose==1.3.7"
]
dev = [
    "flake8>=7.3.0",
    "tox"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
underthesea = ["VERSION", "*.txt", "*.yml", "*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["underthesea", "underthesea.*"]
exclude = ["apps*", "datasets*", "img*", "extensions*", "contribute*", "tests*"]