[package]
name = "underthesea_core"
version = "0.0.4-alpha"
authors = ["Vu Anh <anhv.ict91@gmail.com>"]
description = "Underthesea Core (fast & fun)"
license = "GPL-3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/undertheseanlp/underthesea/"
homepage = "https://github.com/undertheseanlp/underthesea/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[lib]
name = "underthesea_core"
crate-type = ["cdylib"]