[tool.poetry]
name = "underthesea_core"
version = "1.0.4"
authors = ["Vu Anh <anhv.ict91@gmail.com>"]
description = "Underthesea Core"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/undertheseanlp/underthesea/"
homepage = "https://github.com/undertheseanlp/underthesea/tree/main/extensions/underthesea_core"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
maturin = "^0.9.4"

[build-system]
requires = ["setuptools"]
build-backend = "maturin"
