[project]
name = "underthesea-classify-ml"
version = "0.1.0"
description = "Training Pipeline for Underthesea Text classifiers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["scikit-learn>=1.6", "joblib"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (matches flake8 ignore)
]

[tool.flake8]
max-complexity = 10
ignore = ["E501", "W504", "W605"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.13.1",
]
